--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,8 @@ target 'lista1' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'lista1Tests' do
     inherit! :search_paths
     # Pods for testing
