--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
